# COSC522-TornadoMLPredication

./: .gitignore  AGENTS.md  Makefile  README.md  main.ipynb  main.py  pyproject.toml  requirements.txt
Notebooks/: kaden_random_forest.ipynb
configs/: default.yaml
docs/: current_dataset_notes.md  data_workflow.md  getting_started.md  project_structure.md  remaining_tasks.md
scripts/: build_gsod_extract.py  generate_figures.py
src/tornado_ml/: __init__.py  artifact_manager.py  config.py  data_types.py  dataset_builder.py  evaluation.py  experiment_runner.py  inspect_data.py  main.py  models.py  preprocessing.py  splitter.py  summaries.py
tests/: test_config.py  test_dataset_builder.py  test_evaluation.py  test_experiment_runner.py  test_inspect_data.py  test_preprocessing.py  test_splitter.py  test_summaries.py
