[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tornado-ml-prediction"
version = "0.1.0"
description = "GSOD station-day tornado/funnel-cloud classification project."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "joblib>=1.3,<2",
    "matplotlib>=3.8,<3.10",
    "numpy>=1.26,<2.1",
    "pandas>=2.1,<2.4",
    "pyyaml>=6.0,<7",
    "scikit-learn>=1.4,<1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "ruff>=0.4,<1",
]

[project.scripts]
tornado-ml = "tornado_ml.main:main"
tornado-ml-inspect = "tornado_ml.inspect_data:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["UP007", "UP045"]
